# metascend-court-assistant

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
assets/: AppIcon.icns  ui.html
data/cases/: CASE-2026-6324.json
data/knowledge_base/: divorce_law.json  labor_law.json  loan_law.json
data/templates/: strategies.yaml
data/users/: users.json
design/: ui-design-schematic.html
design/fixtures/: ui-preview.html  ui-prototype.html  ui-redesign-v2.html
docs/: api-interfaces.md  architecture.md  audit-report.md  chat-work-audit-report.md  deployment-guide.md  knowledge-base.md  model-card.md  ocr-import.md  p0-implementation-audit.md  privacy-security.md  product-roadmap.md  tech-spec-backend.md  user-manual.md
docs/guides/: phase2-diarization.md  phase3-legal-brain.md  phase4-tts.md  phase5-test-deploy.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig 2.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  Info.plist  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: Info.plist  icon.icns
frontend/src-tauri/src/: ai_stub.rs  asr.rs  audio.rs  cases.rs  chat.rs  diarization.rs  evidence.rs  knowledge.rs  lib.rs  llm.rs  main.rs  pipeline.rs  sidecar.rs  store.rs  strategy.rs  vad.rs
frontend/src/pages/: CasePage.tsx  ChatPage.tsx  EvidencePage.tsx  KnowledgePage.tsx  SettingsPage.tsx  UsersPage.tsx  WorkPage.tsx
frontend/src/styles/: global.css
scripts/: build_app.sh  download_models.py  mlx_server.py
src/: __init__.py  api_server.py  config.py  data_types.py  pipeline.py  users.py
src/asr/: __init__.py  engine.py
src/audio/: __init__.py  capture.py  vad.py
src/case_archive/: __init__.py  encoding.py  models.py  store.py
src/diarization/: __init__.py  clustering.py  embedding.py  engine.py  role_binding.py
src/evidence/: __init__.py  store.py
src/legal/: __init__.py  intent_extractor.py  knowledge_base.py  legal_assistant.py  llm_client.py  risk_filter.py  strategy_generator.py
src/ocr/: __init__.py  engine.py
src/tts/: __init__.py  engine.py
src/utils/: encrypted_log.py  encryption.py  helpers.py  recording_store.py
tests/: conftest.py  test_api_server.py  test_asr.py  test_audio.py  test_case_archive.py  test_diarization.py  test_encrypted_log.py  test_encryption.py  test_evidence.py  test_integration.py  test_legal.py  test_ocr.py  test_ocr_knowledge.py  test_pipeline.py  test_recording_store.py  test_tts.py  test_ui_log_store.py  test_users.py
