[project]
name = "metascend-court-assistant"
version = "0.2.0"
description = "Local-first AI courtroom assistant for macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "silero-vad>=5.0.0",
    "pyannote.audio>=3.3.0",
    "speechbrain>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "ollama>=0.4.0",
    "cryptography>=42.0.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
metascend-mvp = "src.pipeline:main"
metascend-api = "src.api_server:main"
download-models = "scripts.download_models:main"

[tool.uv]
python-preference = "only-managed"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
