[package]
name = "metascend-court-assistant"
version = "0.2.0"
description = "Metascend Court Assistant Tauri app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
tokio = { version = "1", features = ["rt", "macros", "fs", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
