[package]
name = "metascend-court-assistant"
version = "0.2.0"
description = "Metascend Court Assistant Tauri app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
open = "5"
tokio = { version = "1", features = ["process", "time", "sync", "rt", "macros", "io-util", "fs"] }
nix = { version = "0.29", features = ["signal", "process"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
candle-core = { version = "0.11.0", features = ["metal", "accelerate"] }
candle-transformers = "0.11.0"
candle-nn = "0.11.0"
tokenizers = "0.23.1"
hf-hub = "0.5.0"
rand = "0.10.1"
cpal = "0.18.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
